--- a/PuzzlePlatforms-main/Config/DefaultEngine.ini
+++ b/PuzzlePlatforms-main/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@ GameDefaultMap=/Game/MenuSystem/MainManu.MainManu
 EditorStartupMap=/Game/MenuSystem/MainManu.MainManu
 GlobalDefaultGameMode="/Script/PuzzlePlatforms.PuzzlePlatformsGameMode"
 GameInstanceClass=/Script/PuzzlePlatforms.PuzzlePlatformGameInstance
+TransitionMap=/Game/ThirdPersonCPP/Maps/Transiton.Transiton
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
@@ -23,4 +24,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 
 [OnlineSubsystem]
-DefaultPlatformService=Null
+DefaultPlatformService=Steam
+
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
